Fix button spacing

--- a/css/tournament.css
+++ b/css/tournament.css
@@ -57,6 +57,10 @@
 	margin-bottom: 100px;
 }
 
+#tournament #play {
+	margin-bottom: 2px;
+}
+
 #tournament #tablebtn {
 	margin-top: 60px;
 }
